# gtk-rust-app

./: .dockerignore  .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  Makefile  README.md  ci-aarch64.dockerfile  ci-x86-64.dockerfile  cog.toml
ci/: .gitlab-ci-containers.yml  ci-aarch64-0.dockerfile  ci-aarch64.dockerfile  ci-x86-64.dockerfile  flatpak.dockerfile  release.sh  revert_dependency.sh  update_dependency.sh  x86-64.dockerfile
data/: Makefile  app.template.desktop  appdata.template.xml  flatpak-dev.template.yml  flatpak.template.yml  gresource.template.xml  gschema.template.xml
docs/: Index.md  Manifest.md  ManifestReference.md  ProjectDesc.md  Usage.md
examples/app-template/: Cargo.toml  README.md  build.rs  org.project.App.gschema.xml  version.sh
examples/app-template/data/: org.project.App.appdata.xml  org.project.App.desktop  org.project.App.yml
examples/app-template/po/: LINGUAS  de.po
examples/app-template/src/: main.rs
examples/app-template/src/ui/: mod.rs  styles.css  window.rs
examples/app-template/src/ui/components/: header.rs
examples/app-template/src/ui/views/: home.rs  mod.rs  sidebar.rs  view2.rs  view3.rs
examples/calendar/: .gitignore  Cargo.toml  Makefile  build.rs
examples/calendar/assets/: resources.gresource.xml  styles.css
examples/calendar/po/: de.po
examples/calendar/src/: main.rs  store.rs
examples/calendar/src/components/: event_tag.rs  infinity_carousel.rs  mod.rs  month_cell.rs  month_grid.rs  week_cell.rs  week_grid.rs
examples/calendar/src/views/: create_event.rs  mod.rs  month.rs  week.rs
examples/flatpak/: .gitignore  Cargo.toml  Makefile
examples/flatpak/assets/: styles.css
examples/flatpak/po/: de.po
examples/flatpak/src/: main.rs
examples/simple/: .gitignore  App.toml  Cargo.toml  Makefile  README.md  build.rs
examples/simple/po/: LINGUAS  de.po
examples/simple/src/: card.rs  card.ui  home.rs  home.ui  main.rs  styles.css
examples/testapp/: Cargo.toml  build.rs
examples/testapp/po/: POTFILES.in  de.po
examples/testapp/src/: main.rs
gtk-rust-app-derive/: Cargo.toml  README.md  cog.toml
gtk-rust-app-derive/ci/: update_dependency.sh
gtk-rust-app-derive/src/: gobject.rs  lib.rs  variant.rs  widget.rs
gtk-rust-app-derive/src/widget/: args.rs  attributes.rs  imp_block.rs  properties.rs  signals.rs  store.rs
src/: builder.rs  descriptor.rs  flatpak.rs  i18n.rs  lib.rs
src/ui/: macros.rs  mod.rs  window.rs
src/ui/components/: about_view.rs  header.rs  leaflet_layout.rs  menu_button.rs  mod.rs  sidebar.rs  view_switcher_bar.rs
src/ui/debugging/: gstore_debug.rs  gstore_debug.ui  mod.rs
src/ui/widgets/: leaflet_layout.rs  leaflet_layout.xml  mod.rs  sidebar.rs
tests/: integration_tests.rs
