[package]
name = "gtk-rust-app"
version = "0.0.2"
edition = "2018"
authors = ["Florian Loers"]
description = "Framework for writing flatpak apps with GTK in Rust"
readme = "README.md"
repository = "https://gitlab.com/loers/gtk-rust-app"
license = "GPL-3.0-or-later"
keywords = ["GTK", "UI", "flatpak"]
categories = ["gui"]

[features]
default = []
build = []
store = ["gstore"]
ui = [
    "libadwaita",
    "libadwaita-sys",
    "gtk-rust-app-derive",
    "gtk",
    "gdk4",
    "glib",
]

[dependencies]
log = "0.4"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
toml = "0.5"
regex = "1"
sha2 = "0.10"
serde_json = "1"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gtk-rust-app-derive = { path = "gtk-rust-app-derive", optional = true }
gstore = { version = "0.5", optional = true }
gtk = { version = "0.3", package = "gtk4", optional = true }
gdk4 = { version = "0.3", optional = true }
glib = { version = "0.14", optional = true }

libadwaita = { version = "= 0.1.0-alpha-6", optional = true }
libadwaita-sys = { version = "= 0.1.0-alpha-6", optional = true }

[dev-dependencies]
serde-xml-rs = "0.5.1"

[workspace]
members = ["examples/simple", "gtk-rust-app-derive"]
