[package]
name = "gtk-rust-app"
version = "0.11.0"
edition = "2021"
authors = ["Florian Loers"]
description = "Framework for writing flatpak apps with GTK in Rust"
readme = "README.md"
repository = "https://gitlab.com/floers/gtk-rust-app"
license = "GPL-3.0-or-later"
keywords = ["GTK", "UI", "flatpak"]
categories = ["gui"]

[features]
default = ["ui", "libadwaita"]
store = ["gstore"]
ui = [
    "gtk-rust-app-derive",
    "gtk",
    "gdk4",
    "glib",
]
default = ["ui", "build", "store"]
build = []
store = ["gstore"]
ui = ["libadwaita", "gtk-rust-app-derive", "gtk", "gdk4", "glib"]

[dependencies]
log = "0.4"
once_cell = "1"
serde_json = "1"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
gstore = { version = "0.8", optional = true }
# gstore = { path = "../gstore", optional = true }
cargo-gra = { version = "0.5", default-features = false }
# cargo-gra = { git = "https://gitlab.com/floers/cargo-gra", branch = "develop" }
glib = { version = "0.15", optional = true }
gdk4 = { version = "0.4", optional = true }
gtk = { version = "0.4", package = "gtk4", optional = true }
libadwaita = { package = "libadwaita", version = "0.1", optional = true }
# gtk-rust-app-derive = { path = "gtk-rust-app-derive", optional = true }
gtk-rust-app-derive = { version = "0.2", optional = true }

[dev-dependencies]
serde-xml-rs = "0.6"
