[package]
name = "gtk-rust-app-derive"
version = "0.1.1"
edition = "2018"
authors = ["Florian Loers"]
description = "Macros for gtk-rust-app"
readme = "README.md"
repository = "https://gitlab.com/loers/gtk-rust-app"
license = "GPL-3.0-or-later"
keywords = ["GTK", "UI"]
categories = ["gui"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = [ "full", "fold" ] }
quote = "1.0"