[package]
name = "flatpak-example"
version = "0.1.0"
edition = "2018"
authors = ["Florian Loers <florianloers@mailbox.org>"]
homepage = "https://gitlab.com/loers/gtk-rust-app"
license = "GPL-3.0"
repository = "https://gitlab.com/loers/gtk-rust-app/"

[app]
id = "org.example.FlatpakExample"
metadata-license = "CC0-1.0"
summary = "A flatpak app"
description = "This is an example flatpak application."
categories = [ "GTK", "Development" ]
control = [ "pointing", "keyboard", "touch" ]
display = [ "small", "large" ]
screenshots = [ { type = "default", url = "https://gitlab.com/loers/gtk-rust-app/-/raw/main/examples/flatpak/screenshot.png" } ]
releases = [ { version = "0.0.1", date = "2021-11-26", description = "This is the initial version." } ]

[settings]
sidebar-width-request = 200
content-width-request = 300
window-width = 600
window-height = 600
window-maximized = true

[actions]
quit = { accelerators = [ "<primary>W" ] }

[dependencies]
log = "0.4"
env_logger = "0.9"

chrono = { version = "0.4", features = [ "serde" ] }
serde = { version = "1", features = [ "derive" ] }

gettext-rs = "0.7"
gtk = { version = "0.3", package = "gtk4" }

gtk-rust-app = { git = "https://gitlab.com/loers/gtk-rust-app.git" }
gstore = { git = "https://gitlab.com/loers/gstore.git" }

[dependencies.gdk4]
version = "0.3"
[dependencies.glib]
version = "0.14"

[build-dependencies]
gtk-rust-app = { git = "https://gitlab.com/loers/gtk-rust-app.git", features = [ "build" ] }
