[package]
name = "simple-example"
version = "0.1.0"
edition = "2018"
authors = ["Florian Loers <florianloers@mailbox.org>"]
homepage = "https://gitlab.com/floers/gtk-rust-app"
license = "GPL-3.0"
repository = "https://gitlab.com/floers/gtk-rust-app"
default-run = "simple-example"

[dependencies]
log = "0.4"
env_logger = "0.9"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
libadwaita = { package = "libadwaita", version = "0.1" }
gtk = { version = "0.4", package = "gtk4" }
gdk4 = "0.4"
glib = "0.15"

chrono = { version = "0.4" }

# IT gtk-rust-app = { git = "https://gitlab.com/floers/gtk-rust-app.git", branch = "{BRANCH}" }
gtk-rust-app = { path = "../.." }

[build-dependencies]
cargo-gra = "0.4"
